--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -10,9 +10,14 @@
               <i class="nav-icon fa fa-dashboard"></i> <span class="text">Nástěnka</span>
         </a>
 
+        {*<li class="nav-item">*}
+            {*<a href="{plink Places:}" class="nav-link">*}
+              {*<i class="nav-icon fa fa-dashboard"></i> <span class="text">Pokrytí</span>*}
+        {*</a>*}
+
         <li class="nav-item">
-            <a href="{plink Places:}" class="nav-link">
-              <i class="nav-icon fa fa-dashboard"></i> <span class="text">Pokrytí</span>
+            <a href="{plink Device:}" class="nav-link">
+              <i class="nav-icon fa fa-dashboard"></i> <span class="text">Zařízení</span>
         </a>
         
         {*{control sideMenuItems}*}
