--- a/app/AdminModule/presenters/templates/@layout.latte
+++ b/app/AdminModule/presenters/templates/@layout.latte
@@ -11,7 +11,7 @@
     {block head}{/block}
 </head>
 
-<body class="hold-transition skin-green-light sidebar-mini">
+<body class="hold-transition skin-red sidebar-mini">
 <div class="wrapper">
 
     {include @layout/@search.latte}
