--- a/app/AdminModule/presenters/templates/@layout/@styles.latte
+++ b/app/AdminModule/presenters/templates/@layout/@styles.latte
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/_admin/components/adminlte/adminlte.min.css">
+<link rel="stylesheet" href="/_admin/components/adminlte/skin-red.css">
 <link rel="stylesheet" href="/_admin/components/bootstrap/font-awesome.min.css">
 <link rel="stylesheet" href="/_admin/components/bootstrap/ionicons.min.css">
 
