--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -19,7 +19,12 @@
             <a href="{plink Device:}" class="nav-link">
               <i class="nav-icon fa fa-dashboard"></i> <span class="text">Zařízení</span>
         </a>
-        
+
+        <li class="nav-item">
+            <a href="{plink Place:}" class="nav-link">
+              <i class="nav-icon fa fa-dashboard"></i> <span class="text">Tabule</span>
+        </a>
+
         {*{control sideMenuItems}*}
         {*
         <li class="treeview">
