AdminLTE navbar css fix

--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -17,7 +17,7 @@
 
         <li class="nav-item">
             <a href="{plink Device:}" class="nav-link">
-              <i class="nav-icon fa fa-dashboard"></i> <span class="text">Zařízení</span>
+              <i class="nav-icon fa fa-qrcode"></i> <span class="text">Zařízení</span>
         </a>
 
         <li class="nav-item">
