--- a/app/AdminModule/presenters/templates/@layout/@navbar.latte
+++ b/app/AdminModule/presenters/templates/@layout/@navbar.latte
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="main-header navbar navbar-sticky-top bg-primary navbar-dark">
+<nav class="main-header navbar navbar-sticky-top">
     <!-- Logo -->
     <a class="navbar-brand text-xs-center" href="{plink :Admin:Dashboard:}">
         <span class="logo hidden-md-down"><b>Test</b></span>
