--- a/www/_admin/components/adminlte/skin-red.css
+++ b/www/_admin/components/adminlte/skin-red.css
@@ -2,43 +2,43 @@
  * Skin: Red
  * ---------
  */
-.skin-red .main-header .navbar {
+.skin-red .main-header.navbar {
   background-color: #dd4b39;
 }
-.skin-red .main-header .navbar .nav > li > a {
+.skin-red .navbar .nav > li > a {
   color: #ffffff;
 }
-.skin-red .main-header .navbar .nav > li > a:hover,
-.skin-red .main-header .navbar .nav > li > a:active,
-.skin-red .main-header .navbar .nav > li > a:focus,
-.skin-red .main-header .navbar .nav .open > a,
-.skin-red .main-header .navbar .nav .open > a:hover,
-.skin-red .main-header .navbar .nav .open > a:focus,
-.skin-red .main-header .navbar .nav > .active > a {
+.skin-red .navbar .nav > li > a:hover,
+.skin-red .navbar .nav > li > a:active,
+.skin-red .navbar .nav > li > a:focus,
+.skin-red .navbar .nav .open > a,
+.skin-red .navbar .nav .open > a:hover,
+.skin-red .navbar .nav .open > a:focus,
+.skin-red .navbar .nav > .active > a {
   background: rgba(0, 0, 0, 0.1);
   color: #f6f6f6;
 }
-.skin-red .main-header .navbar .sidebar-toggle {
+.skin-red .navbar .sidebar-toggle {
   color: #ffffff;
 }
-.skin-red .main-header .navbar .sidebar-toggle:hover {
+.skin-red .navbar .sidebar-toggle:hover {
   color: #f6f6f6;
   background: rgba(0, 0, 0, 0.1);
 }
-.skin-red .main-header .navbar .sidebar-toggle {
+.skin-red .navbar .sidebar-toggle {
   color: #fff;
 }
-.skin-red .main-header .navbar .sidebar-toggle:hover {
+.skin-red .navbar .sidebar-toggle:hover {
   background-color: #d73925;
 }
 @media (max-width: 767px) {
-  .skin-red .main-header .navbar .dropdown-menu li.divider {
+  .skin-red .navbar .dropdown-menu li.divider {
     background-color: rgba(255, 255, 255, 0.1);
   }
-  .skin-red .main-header .navbar .dropdown-menu li a {
+  .skin-red .navbar .dropdown-menu li a {
     color: #fff;
   }
-  .skin-red .main-header .navbar .dropdown-menu li a:hover {
+  .skin-red .navbar .dropdown-menu li a:hover {
     background: #d73925;
   }
 }
@@ -131,4 +131,8 @@
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 0;
+}
+
+.skin-red .navbar-brand {
+  background: #d73925;
 }
