AdminLTE navbar brand

--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -22,7 +22,7 @@
 
         <li class="nav-item">
             <a href="{plink Place:}" class="nav-link">
-              <i class="nav-icon fa fa-dashboard"></i> <span class="text">Tabule</span>
+              <i class="nav-icon fa fa-map-marker"></i> <span class="text">Tabule</span>
         </a>
 
         {*{control sideMenuItems}*}
