--- a/app/AdminModule/presenters/templates/Quiz/default.latte
+++ b/app/AdminModule/presenters/templates/Quiz/default.latte
@@ -1,7 +1,7 @@
 {block content}
 <div class="row">
     <div class="col-md-12">
-        {*<a class="btn-md btn btn-primary pull-right" href="{plink new}">Přidat</a>*}
+        <a class="btn-md btn btn-primary pull-right" href="{plink new}">Přidat</a>
     </div>
 </div>
 {control grid}
