--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -36,6 +36,12 @@
             </a>
         </li>
 
+        <li class="nav-item">
+            <a href="{plink Quiz:}" class="nav-link">
+                <i class="nav-icon fa fa-users"></i> <span class="text">Kvíz</span>
+            </a>
+        </li>
+
 
         {*{control sideMenuItems}*}
         {*
