--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -38,8 +38,24 @@
 
         <li class="nav-item">
             <a href="{plink Quiz:}" class="nav-link">
-                <i class="nav-icon fa fa-users"></i> <span class="text">Kvíz</span>
+                <i class="nav-icon fa fa-question-circle"></i> <span class="text">Kvíz</span>
             </a>
+        </li>
+
+        <li class="nav-treeview">
+            <a href="#">
+                <i class="fa fa-pie-chart"></i>
+                <span>Charts</span>
+                <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+            </a>
+            <ul class="treeview-menu" style="display: block;">
+                <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+                <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+                <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+            </ul>
         </li>
 
 
