--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -42,8 +42,8 @@
             </a>
         </li>
 
-        <li class="nav-treeview">
-            <a href="#">
+        <li class="nav-item has-treeview">
+            <a  class="nav-link" href="#">
                 <i class="fa fa-pie-chart"></i>
                 <span>Charts</span>
                 <span class="pull-right-container">
@@ -51,10 +51,10 @@
             </span>
             </a>
             <ul class="treeview-menu" style="display: block;">
-                <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                <li class="nav-item"><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                <li class="nav-item"><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+                <li class="nav-item"><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+                <li class="nav-item"><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
             </ul>
         </li>
 
