--- a/app/AdminModule/presenters/templates/Quiz/new.latte
+++ b/app/AdminModule/presenters/templates/Quiz/new.latte
@@ -4,4 +4,6 @@
         <a class="btn-md btn btn-primary pull-right" href="{plink new}">Přidat</a>
     </div>
 </div>
-{control new}
+<div class="quiz_wrapper">
+    {control new}
+</div>
