material design init

--- a/app/AdminModule/presenters/templates/@layout/@scripts.latte
+++ b/app/AdminModule/presenters/templates/@layout/@scripts.latte
@@ -33,5 +33,7 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.6.0/Sortable.min.js"></script>
 
+<script src="/_admin/components/material_design/materialize.js"></script>
+
 <script src="/_admin/main.js"></script>
 <script src="/_admin/components/dropzone/dropzone_init.js"></script>
