--- a/app/AdminModule/presenters/templates/@layout/@styles.latte
+++ b/app/AdminModule/presenters/templates/@layout/@styles.latte
@@ -12,4 +12,6 @@
 
 <link rel="stylesheet" href="/_admin/components/datatree/datatree/css/themes/default/style.min.css">
 {\Zet\FileUpload\FileUploadControl::getHead('/_admin/components')}
+<link rel="stylesheet" href="/_admin/components/material_design/materialize.css">
+
 <link rel="stylesheet" href="/_admin/custom.css">
