--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -16,12 +16,6 @@
         {*<i class="nav-icon fa fa-dashboard"></i> <span class="text">Pokrytí</span>*}
         {*</a>*}
 
-        <li class="nav-item">
-            <a href="{plink Device:}" class="nav-link">
-                <i class="nav-icon fa fa-qrcode"></i> <span class="text">Zařízení</span>
-            </a>
-
-        </li>
 
         <li class="nav-item">
             <a href="{plink Place:}" class="nav-link">
@@ -37,21 +31,22 @@
         </li>
 
         <li class="nav-item">
-            <a href="{plink Quiz:}" class="nav-link">
-                <i class="nav-icon fa fa-question-circle"></i> <span class="text">Kvíz</span>
+            <a href="{plink Device:}" class="nav-link">
+                <i class="nav-icon fa fa-qrcode"></i> <span class="text">Zařízení</span>
             </a>
+
         </li>
 
         <li class="nav-item has-treeview">
             <a  class="nav-link" href="#">
                 <i class="fa fa-pie-chart"></i>
-                <span>Charts</span>
+                <span>Aktivity</span>
                 <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
             </a>
             <ul class="treeview-menu" style="display: block;">
-                <li class="nav-item"><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                <li class="nav-item"><a href="{plink Quiz:}"><i class="fa fa-question-circle"></i> Kvíz</a></li>
                 <li class="nav-item"><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
                 <li class="nav-item"><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
                 <li class="nav-item"><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
