--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -19,7 +19,7 @@
 
         <li class="nav-item">
             <a href="{plink Place:}" class="nav-link">
-                <i class="nav-icon fa fa-map-marker"></i> <span class="text">Tabule</span>
+                <i class="nav-icon fa fa-map-marker"></i> <span class="text">Místa</span>
             </a>
 
         </li>
@@ -47,7 +47,7 @@
             </a>
             <ul class="treeview-menu" style="display: block;">
                 <li class="nav-item"><a href="{plink Quiz:}"><i class="fa fa-question-circle"></i> Kvíz</a></li>
-                <li class="nav-item"><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+                <li class="nav-item"><a href="{plink Pexeso}"><i class="fa fa-th"></i> Pexeso</a></li>
                 <li class="nav-item"><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
                 <li class="nav-item"><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
             </ul>
