--- a/app/AdminModule/presenters/templates/@layout/@menu.latte
+++ b/app/AdminModule/presenters/templates/@layout/@menu.latte
@@ -39,17 +39,17 @@
 
         <li class="nav-item has-treeview">
             <a  class="nav-link" href="#">
-                <i class="fa fa-pie-chart"></i>
+                <i class="fa fa-briefcase"></i>
                 <span>Aktivity</span>
                 <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
             </a>
-            <ul class="treeview-menu" style="display: block;">
+            <ul class="treeview-menu menu-open" style="display: block;">
                 <li class="nav-item"><a href="{plink Quiz:}"><i class="fa fa-question-circle"></i> Kvíz</a></li>
                 <li class="nav-item"><a href="{plink Pexeso}"><i class="fa fa-th"></i> Pexeso</a></li>
-                <li class="nav-item"><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                <li class="nav-item"><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                <li class="nav-item"><a href="{plink Quiz:}"><i class="fa fa-rocket"></i> Raketa</a></li>
+                <li class="nav-item"><a href="{plink Quiz:}"><i class="fa fa-comments-o"></i>WYR</a></li>
             </ul>
         </li>
 
