logo mini hover bg none

--- a/app/AdminModule/presenters/templates/@layout/@navbar.latte
+++ b/app/AdminModule/presenters/templates/@layout/@navbar.latte
@@ -2,8 +2,8 @@
 <nav class="main-header navbar navbar-sticky-top">
     <!-- Logo -->
     <a class="navbar-brand text-xs-center" href="{plink :Admin:Dashboard:}">
-        <span class="logo hidden-md-down"><b>Test</b></span>
-        <span class="logo logo-mini"><i class="ion ion-coffee"></i></span>
+        <span class="logo hidden-md-down"><b>SMILE</b></span>
+        <span class="logo logo-mini">S</span>
     </a>
 
     <!-- Left navbar links -->
